--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- about section starts  -->
     <section class="about" id="about">
         <div class="one1 firstone">
-            <img class="shashank"src="second-pic.jpeg" alt="" height="550px" width="350px">
+            <img class="shashank"src="second-pic.jpg" alt="" height="550px" width="350px">
         </div>
         <div class="one1 secondone">
             <h2 class="mmmeee">About <span>Me</span></h2>
