--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
      <!-- PORTFOLIO section starts  -->
     <section class="portfolio" id="portfolio">
         <div class="main-text">
-            <p>My portfolio</p>
-            <h2><span>current</span> Projects</h2>
+            <p>My Portfolio</p>
+            <h2><span>Current</span> Projects</h2>
         </div>
         <div class="portfoliocontent">
             <div class="row">
